[gd_scene load_steps=10 format=3 uid="uid://dvbe4nfamjdyu"]

[ext_resource type="Script" uid="uid://ceadrbxj5ca7y" path="res://src/ui/ui_container/ui.gd" id="1_8wxmc"]
[ext_resource type="PackedScene" uid="uid://dvbc6kk5nm7p2" path="res://src/ui/health_bar/health_bar.tscn" id="2_jlntk"]
[ext_resource type="Texture2D" uid="uid://chi2u85rf4ru3" path="res://src/assets/sprites/characters/player/Bancho_Idle.png" id="3_qemve"]
[ext_resource type="Texture2D" uid="uid://hk8hci84w33d" path="res://src/assets/sprites/characters/enemy/batting_girl/BattingGirl_Idle-Sheet.png" id="4_8wxmc"]
[ext_resource type="Texture2D" uid="uid://df3t11ce2tpnk" path="res://src/assets/sprites/characters/enemy/brute_arms/BruteArm_Idle.png" id="4_sjdex"]
[ext_resource type="PackedScene" uid="uid://dqof4n8ia1le4" path="res://src/ui/combo_indicator/combo_indicator.tscn" id="6_jnjid"]
[ext_resource type="PackedScene" uid="uid://cb8vvr46tffn3" path="res://src/ui/score_indicator/score_indicator.tscn" id="7_2qgjt"]
[ext_resource type="PackedScene" uid="uid://b2g5my27kumq6" path="res://src/utils/flickering_texture/flickering_texture_rect.tscn" id="8_yaefl"]
[ext_resource type="Texture2D" uid="uid://crx4ht1nkc2gv" path="res://src/assets/sprites/ui/go-go-go.png" id="9_ucbnj"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8wxmc")
duration_healthbar_visible = 2000

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerAvatar" type="Sprite2D" parent="UIContainer"]
position = Vector2(0, 1)
scale = Vector2(1.5, 1.64)
texture = ExtResource("3_qemve")
centered = false
hframes = 7
region_enabled = true
region_rect = Rect2(31, 20, 180, 27)

[node name="EnemyAvatar" type="Sprite2D" parent="UIContainer"]
position = Vector2(458, 0)
scale = Vector2(1.57692, 1.68)
texture = ExtResource("4_8wxmc")
centered = false
flip_h = true
hframes = 15
region_enabled = true
region_rect = Rect2(24, 26, 400, 27)

[node name="EnemyAvatar2" type="Sprite2D" parent="UIContainer"]
position = Vector2(450, 6)
scale = Vector2(1.38889, 1.49185)
texture = ExtResource("4_sjdex")
centered = false
flip_h = true
hframes = 15
region_enabled = true
region_rect = Rect2(32, 20, 541, 27)

[node name="PlayerHealthBar" parent="UIContainer" instance=ExtResource("2_jlntk")]
offset_top = 45.0
offset_right = 30.0
offset_bottom = 49.0
metadata/_edit_use_anchors_ = true

[node name="EnemyHealthBar" parent="UIContainer" instance=ExtResource("2_jlntk")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_top = 46.0
offset_right = 4.0
offset_bottom = 50.0
grow_horizontal = 0
is_inverted = true

[node name="WhiteBorder" parent="UIContainer/EnemyHealthBar" index="0"]
layout_direction = 3
scale = Vector2(-30, 1)

[node name="ContentBackground" parent="UIContainer/EnemyHealthBar" index="1"]
layout_direction = 3
scale = Vector2(-29, 1)

[node name="HealthGauge" parent="UIContainer/EnemyHealthBar" index="2"]
layout_direction = 3
scale = Vector2(-10, 1)

[node name="ComboIndicator" parent="UIContainer" instance=ExtResource("6_jnjid")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -23.0
offset_right = 42.0
offset_bottom = 0.0
grow_vertical = 0

[node name="ScoreIndicator" parent="UIContainer" instance=ExtResource("7_2qgjt")]
layout_mode = 0
offset_left = 43.0
offset_top = 23.0
offset_right = 83.0
offset_bottom = 46.0

[node name="GoIndicator" parent="UIContainer" instance=ExtResource("8_yaefl")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 68.0
offset_right = -1.0
offset_bottom = 108.0
grow_horizontal = 0
texture = ExtResource("9_ucbnj")
duration_flicker = 200
total_flickers = 3

[editable path="UIContainer/EnemyHealthBar"]
